added more styling edits from feedback

--- a/_includes/toolkit_sections/annual_four.html
+++ b/_includes/toolkit_sections/annual_four.html
@@ -1,3 +1,8 @@
+<p class="workbook_link" style="font-size: 20px;">
+  <a href="{{prepend: site.baseurl}}/assets/toolkits/annual_sample_summary.pdf">
+    Click here to download a Sample Evaluation Description
+  </a>
+</p>
 <div class="usa-grid" align="center">
   <h2 class="heading"> Your agency’s Annual Evaluation Plan will describe “significant” evaluations. What specific
     information could your agency include about each evaluation?
@@ -53,8 +58,8 @@
   <p style="text-align: left;">
     You have developed a learning agenda, identified current and recent evaluations, possibly
     developed new evaluations, and determined which evaluations are “significant.” Now, it is time
-    to bring that all together into a written Annual Evaluation Plan. For a sample evaluation
-    description, please download the handout in the tab to the right.
+    to bring that all together into a written Annual Evaluation Plan. For a sample evaluation description,
+    please download the handout at the top of this page
   </p>
   <p style="text-align: left;">
     Consider using the checklist below to ensure each of your evaluation descriptions contains all
