--- a/_includes/toolkit_sections/annual_three.html
+++ b/_includes/toolkit_sections/annual_three.html
@@ -3,7 +3,7 @@
     “significant.” How can your agency decide which evaluations are “significant”?
   </h2>
   <div class="heading_content_wrapper">
-    <div style="text-align: left; padding-right: 10px;">
+    <div style="text-align: left; padding-right: 10px; line-height: 30px;">
       <p>Each agency must develop its own criteria for
       “significant” evaluations, describe these criteria in
       the Annual Evaluation Plan, and apply these
@@ -100,7 +100,7 @@
   <p style="text-align: left;">
     A rubric can be a useful tool to facilitate conversations when selecting evaluations for the
     Annual Evaluation Plan based on your agency’s criteria. For an example rubric, see <span style="color: orange;"><b>Worksheet
-    #1</b></span> of the Annual Evaluation Plan Workbook (available for download in the tab to the right).
+    #1</b></span> of the Annual Evaluation Plan Workbook.
   </p>
   <p style="text-align: left;"> <b> Sample Classification of “Significant” and Non-“Significant” Evaluations </b> </p>
   <p style="text-align: left;">
