--- a/_includes/toolkit_sections/annual_two.html
+++ b/_includes/toolkit_sections/annual_two.html
@@ -99,7 +99,8 @@ develop a planning process that suits its unique needs and capacity?
         their results. </p>
     </div>
   </div>
-  <div class="blue_div">
+
+  <div class="blue_div" style="margin-top: 40px;">
     <p style="text-align: center;"> <b>How the Small Business Administration Engages Program Staff in Evaluation Planning</b></p>
     <p style="text-align: left;">
       The Office of Program Performance, Analysis and Evaluation works with program offices throughout the year to
@@ -139,8 +140,7 @@ develop a planning process that suits its unique needs and capacity?
     foster a shared purpose.
   </p>
   <p style="text-align: left;">
-    <b><span style='color:orange'>Activity 1</span></b>  of the Annual Evaluation Plan Workbook (available for download in the tab to the
-    right) provides one approach for mapping the landscape of stakeholders who could be involved
+    <b><span style='color:orange'>Activity 1</span></b>  of the Annual Evaluation Plan Workbook provides one approach for mapping the landscape of stakeholders who could be involved
     in the Annual Evaluation Plan development process. <b><span style='color:orange'>Activity 2</span></b> of the Annual Evaluation Plan
     Workbook is intended to help you determine the role each stakeholder may take on.
   </p>
