--- a/_includes/toolkit_sections/section_five.html
+++ b/_includes/toolkit_sections/section_five.html
@@ -51,7 +51,7 @@
       engagement activities, refer to <b><span style='color:orange'>Worksheet #3</span></b> of the Learning Agenda Workbook.
     </p>
     <div class="heading_content_wrapper">
-      <div style="text-align: left; padding-right: 10px;">
+      <div style="text-align: left; padding-right: 10px; line-height: 30px;">
         <b>Interim and Final Learning Agenda</b>
         The approach to developing the final,
         published learning agenda in fiscal year
@@ -115,7 +115,7 @@
       </tr>
       <tr>
         <td> What is it?</td>
-        <td>
+        <td style="line-height: 30px;">
           A Strategic Plan establishes the goals, objectives, and strategies for an
           agency over a five-year period. Beginning in FY 2021, Strategic Plans will
           include a section with the agency’s learning agenda and Capacity
@@ -157,7 +157,7 @@
       </tr>
       <tr>
         <td> What is it? </td>
-        <td>
+        <td style="line-height: 30px;">
           Using the agency Strategic Plan, agency leaders assess progress on
           mission, service, stewardship, and cross-cutting strategic objectives. This
           process includes identification of areas where additional evaluation, other
@@ -203,7 +203,7 @@
       </tr>
       <tr>
         <td> What is it? </td>
-        <td>
+        <td style="line-height: 30px;">
           The APP is a description of the strategies necessary to achieve a desired
           level of performance in the next fiscal year, including the key performance
           targets and milestones that will be accomplished.
@@ -250,7 +250,7 @@
       </tr>
       <tr>
         <td> What is it? </td>
-        <td>
+        <td style="line-height: 30px;">
           Performance management reviews are routine (at least quarterly) and datadriven reviews led by agency leaders on a limited set of the agency’s
           performance improvement priorities. The frequent reviews provide a
           mechanism for agency leaders to keep an agency focused on an identified
@@ -282,7 +282,7 @@
       </tr>
       <tr>
         <td> What is it?</td>
-        <td>
+        <td style="line-height: 30px;">
           The PMIAA aims to improve program and project management practices
           within the federal government by requiring government-wide standards and
           policies for program management and establishing a new interagency
@@ -336,7 +336,7 @@
       </tr>
       <tr>
         <td> What is it? </td>
-        <td>
+        <td style="line-height: 30px;">
           The GDA promotes stronger partnerships between the federal government,
           state and local governments, and the private sector to advance the National
           Spatial Data Infrastructure. It includes policy and guidance to empower the
@@ -379,7 +379,7 @@
       </tr>
       <tr>
         <td> What is it?</td>
-        <td>
+        <td style="line-height: 30px;">
           The FMFIA requires federal agencies to establish internal accounting and
           administrative controls. OMB Circular A-123 includes requirements and
           guidance on agencies’ Enterprise Risk Management and Internal Controls
