--- a/_includes/toolkit_sections/section_four.html
+++ b/_includes/toolkit_sections/section_four.html
@@ -4,7 +4,7 @@
     leadership to be champions of your agency’s learning agenda?
   </h2>
   <div class="heading_content_wrapper">
-    <div style="text-align: left; padding-right: 10px;">
+    <div style="text-align: left; padding-right: 10px; line-height: 30px;">
       Consistent leadership support and buy-in is
       critical to the learning agenda process. This
       section provides tips on how to engage with
