--- a/_includes/toolkit_sections/section_one.html
+++ b/_includes/toolkit_sections/section_one.html
@@ -1,10 +1,15 @@
+<p class="workbook_link" style="font-size: 20px;">
+  <a href="{{prepend: site.baseurl}}/assets/toolkits/LA_overview.pdf">
+    Click here to view the Learning Agenda Overview.
+  </a>
+</p>
 <div class="usa-grid" align="center">
   <h2 class="heading"> A learning agenda can be a useful coordination tool for identifying knowledge gaps and
       answer a range of priority questions within budget and policy timeframes.1 How can a
       learning agenda support your agency in achieving its mission?
   </h2>
   <div class="heading_content_wrapper">
-    <div style="text-align: left; padding-right: 10px;">
+    <div style="text-align: left; padding-right: 10px; line-height: 30px">
       A learning agenda helps agencies plan for evidencebuilding activities and can lead to organizational
       learning. Under the Foundations for Evidence-Based
       Policymaking Act of 2018 (Evidence Act), Chief
@@ -37,10 +42,10 @@
     </div>
   </div>
   <p style="text-align: left;"> <b> Benefits of a Learning Agenda </b> </p>
-  <p style="text-align: left;"> Learning agendas can have many benefits for agencies. Specifically, the plans can beused to: </p>
+  <p style="text-align: left;"> Learning agendas can have many benefits for agencies. Specifically, the plans can be used to: </p>
   <p style="text-align: right; margin-right: 100px;"><b> Example Actions </b> </p>
     <div class="contents_wrapper">
-      <p style="width: 2000px"> <i>Foster a culture of learning and continuous
+      <p style="width: 1400px"> <i>Foster a culture of learning and continuous
           improvement.</i> Learning agenda development
           and implementation includes frequent internal
           and external stakeholder engagement. As
@@ -57,7 +62,7 @@
           a culture of learning. </p>
     </div>
     <div class="contents_wrapper">
-      <p style="width: 2000px"> <i>Engage stakeholders in evidence planning
+      <p style="width: 1100px"> <i>Engage stakeholders in evidence planning
           and building to help achieve an agency’s
           mission. </i>  The learning agenda process
           provides opportunities to work with both
@@ -192,7 +197,7 @@
       Council with senior leaders, including the agency Chief Data Officer (CDO) and
       Statistical Official (SO) (the other designated officials established by the Evidence Act).
       The council or working group could receive updates on the process and deliberate on
-      the plan’s components. Download the attachment in the tab to the right for a one-page
+      the plan’s components. Download the attachment at the top of this page for a one-page
       Learning Agenda Overview to share with agency staff.</p>
       <p style="text-align: left; color: #2E9AC4"><b>Establish a cross-functional leadership team.</b></p>
       <p style="text-align: left;"> The EO should consider establishing
