--- a/_includes/toolkit_sections/section_seven.html
+++ b/_includes/toolkit_sections/section_seven.html
@@ -1,12 +1,17 @@
+<p class="workbook_link" style="font-size: 20px;">
+  <a href="{{prepend: site.baseurl}}/assets/toolkits/annual_sample_summary.pdf">
+    Click here to download a Sample Learning Agenda Section.
+  </a>
+</p>
 <div>
   <h2 class="heading"">There is no prescribed style or format for the learning agenda.
     How will you design the learning agenda to be meaningful to your agency?</h2>
 
-  <div style="float: right; background-color: lightgrey; margin: 10px; padding: 10px; width: 400px;">
+  <div style="float: right; background-color: lightgrey; margin: 10px; padding: 10px; width: 500px;">
     <p><b>OMB M-19-23 Reference</b></p>
     <p style="text-align: left;">At a minimum, agencies should include the following types of content in their learning agenda,
       recognizing that this content does not necessarily need to be organized according to these headings:</p>
-    <ul>
+    <ul style="text-align: left;">
       <li>Which Strategic Goals and Objectives that the Learning Agenda will Address</li>
       <li>Priority Questions to be Answered</li>
       <li>Activities that the agency will engage in to address Priority Questions</li>
@@ -15,12 +20,12 @@
       <li>Anticipated Agency-Specific Challenges and Proposed Solutions to Developing Evidence to Support Agency Priorities</li>
   </div>
 
-  <p>Your agency’s learning agenda is required to be published with the Strategic Plan and Capacity Assessment at least every four years. Like the Strategic Plan, the learning agenda should be written in plain language to make it easy for internal and external stakeholders to understand. While the guidance released by the Office of Management and Budget (OMB) lists specific topics to be included in the learning agenda, as shown in the box to the right, it also emphasizes agencies’ flexibility in designing and structuring their learning agendas (e.g., adding a new section). This toolkit section includes a sample learning agenda question aligned to a strategic goal and a template that categorizes questions by focus area.</p>
+  <p style="text-align: left;">Your agency’s learning agenda is required to be published with the Strategic Plan and Capacity Assessment at least every four years. Like the Strategic Plan, the learning agenda should be written in plain language to make it easy for internal and external stakeholders to understand. While the guidance released by the Office of Management and Budget (OMB) lists specific topics to be included in the learning agenda, as shown in the box to the right, it also emphasizes agencies’ flexibility in designing and structuring their learning agendas (e.g., adding a new section). This toolkit section includes a sample learning agenda question aligned to a strategic goal and a template that categorizes questions by focus area.</p>
 
   <h3 style="text-align: left;">Potential Reference Documents</h3>
   <p style="text-align: left;">The following documents may be useful to reference while writing your agency’s learning agenda:</p>
   <ul style="text-align: left;">
-    <li><b style="color:#2E9AC4;">Stakeholder engagement meeting notes:</b> If you completed <b style="color:orange;">Worksheet #2</b> of the Learning Agenda Workbook (available for download in the tab to the right), you may already have a repository of ongoing learning activities and potential data, tools, methods, and analytic approaches to answer priority questions. </li>
+    <li><b style="color:#2E9AC4;">Stakeholder engagement meeting notes:</b> If you completed <b style="color:orange;">Worksheet #2</b> of the Learning Agenda Workbook (available for download at the top of this page), you may already have a repository of ongoing learning activities and potential data, tools, methods, and analytic approaches to answer priority questions. </li>
       <ul>
         <li>Confirm the accuracy of this information with the Chief Data Officer and Statistical Official.</li>
       </ul>
@@ -29,38 +34,38 @@
     <li><b style="color:#2E9AC4;">Capacity Assessment results</b> The Capacity Assessment will also be published every four years with the learning agenda.
       There is no prescribed timing or coordination between the Capacity Assessment and learning agenda. However, some of the requirements may serve as useful inputs, as shown below.</li>
   </ul>
-  <div style="display: flex; justify-content: space-between;">
-    <p style="text-align: left; margin-right: 100px;"><b> Capacity Assessment </b> </p>
-    <p style="text-align: right; margin-right: 100px;"><b> Learning Agenda </b> </p>
+  <div style="display: flex; justify-content: space-around;">
+    <p style="text-align: left; margin-right: 300px;"><b> Capacity Assessment </b> </p>
+    <p style="text-align: right; margin-right: 20px;"><b> Learning Agenda </b> </p>
   </div>
-  <div class="contents_wrapper">
+  <div class="contents_wrapper" style="justify-content: space-around;">
     <p style="width: 300px;">
       Inventory of activities and programs
       that are being evaluated
     </p>
-    <img src="{{ '/assets/img/icons/arrow.png' | prepend: site.baseurl }}" alt="" height="50" width="50" style="margin-top: 100px; margin: 50px;" />
-    <p style="width: 200px;">
+    <img src="{{ '/assets/img/icons/arrow.png' | prepend: site.baseurl }}" alt="" height="70" width="70" style="margin: 30px;" />
+    <p style="width: 200px; margin-right: 40px;">
       Evidence-building activities to
       answer priority questions
     </p>
   </div>
-  <div class="contents_wrapper">
+  <div class="contents_wrapper" style="justify-content: space-around;">
     <p style="width: 300px;">
       Assessment of how evidencebuilding activities support agency
       needs
     </p>
-    <img src="{{ '/assets/img/icons/arrow.png' | prepend: site.baseurl }}" alt="" height="50" width="50" style="margin-top: 100px; margin: 50px;" />
-    <p style="width: 200px;">
+    <img src="{{ '/assets/img/icons/arrow.png' | prepend: site.baseurl }}" alt="" height="70" width="70" style="margin: 30px;" />
+    <p style="width: 200px; margin-right: 40px;">
       Timing of learning activities
     </p>
   </div>
-  <div class="contents_wrapper">
+  <div class="contents_wrapper" style="justify-content: space-around;">
     <p style="width: 300px;">
       Assessment of information
       exchange and follow-through
     </p>
-    <img src="{{ '/assets/img/icons/arrow.png' | prepend: site.baseurl }}" alt="" height="50" width="50" style="margin-top: 100px; margin: 50px;" />
-    <p style="width: 200px;">
+    <img src="{{ '/assets/img/icons/arrow.png' | prepend: site.baseurl }}" alt="" height="70" width="70" style="margin: 30px;" />
+    <p style="width: 200px; margin-right: 40px;">
       Challenges and mitigation
       strategies
     </p>
@@ -69,7 +74,7 @@
   <p style="text-align: left;"><b>Learning Agenda Section Sample</b></p>
   <p style="text-align: left;">
     The following learning agenda section sample for the fictitious Department
-    of Societal Betterment can be downloaded in the tab. The sample section covers
+    of Societal Betterment can be downloaded at the top of this page. The sample section covers
     all topics listed in the <a href="https://www.whitehouse.gov/wp-content/uploads/2019/07/M-19-23.pdf" style="color:#2E9AC4;">OMB M-19-23</a> box above.</p>
 
   <div class="blue_div">
@@ -188,7 +193,7 @@
         challenges specific to an individual question or broader agency challenges. For each challenge, document a
         proposed mitigation strategy.
       </p>
-      <p style="text-align: center;"> <i>*Repeat the five headers above as needed*:</i></p>
+      <p style="text-align: center;"> <i>*Repeat the five headers above as needed*</i></p>
       <p style="text-align: left;"> <b>
         Optional: Learning Agenda Updates </b></p>
       <p style="text-align: left;">
