--- a/_includes/toolkit_sections/section_six.html
+++ b/_includes/toolkit_sections/section_six.html
@@ -45,7 +45,7 @@ information to create a list of priority questions for your learning agenda?
 <p style="text-align: left;">
   f your agency opts to have sub-agency learning agendas, this process can be used to
   determine which sub-agency learning agenda questions will be included in the agencywide learning agenda. Please note that sub-agency learning agendas cannot fulfill the
-  requirement for an agency-wide learning agenda. See the <a href="{{ site.baseurl}}/toolkits"">Office of Evaluation Sciences
+  requirement for an agency-wide learning agenda. See the <a href="{{ site.baseurl}}/toolkits">Office of Evaluation Sciences
   Toolkit Landing Page</a> to download additional information about sub-agency learning
   agendas.
 </p>
@@ -67,8 +67,7 @@ questions, refer to <a href="{{ site.baseurl}}/learninginfo#2""><b>Section 2: Ty
   process for this team. The process below, and guidance in <span style="color: orange;"><b>Activity #2</b></span> of the Learning
   Agenda Workbook can be used to form questions that are relevant and meaningful to
   your agency’s strategy and operations. To follow along with <span style="color: orange;"><b>Activity #2</b></span> of the Learning
-  Agenda Workbook and the steps below, download the Excel Workbook in the tab to the
-  right.
+  Agenda Workbook and the steps below,<a href="{{ site.baseurl}}/assets/toolkits/activity_two.xlsx""> click here to download the Excel Workbook </a>.
 </p>
 <p style="text-align: left;"><b>1. Create a Rubric and Vet Questions</b></p>
 <p style="text-align: left;">
@@ -117,7 +116,7 @@ from the United States Agency for International Development </b></p>
 </div>
 <p style="text-align: left;"><b>2. Assess Alignment with Strategic Goals and OMB M-19-23 Guidance</b></p>
 <div class="heading_content_wrapper">
-  <div style="text-align: left; padding-right: 10px;">
+  <div style="text-align: left; padding-right: 10px; line-height: 30px;">
     Now that you have a set of organized,
     potential priority questions, consider whether
     the portfolio of questions align to leadership
@@ -228,7 +227,7 @@ from the United States Agency for International Development </b></p>
   meeting for a focused discussion that leads to consensus on the priority questions.
 </p>
 <p style="text-align: left;">
-  Download the template in the tab to the right and refer to <span style="color: orange;"><b>Activity #3</b></span> of the Learning
+  <a href="{{ site.baseurl}}/assets/toolkits/activity_three.pptx"">Click here to download a PowerPoint template</a> and refer to <span style="color: orange;"><b>Activity #3</b></span> of the Learning
   Agenda Workbook to develop a customized presentation for a guided discussion with
   senior leadership. For more information about how to encourage leadership buy-in,
   please reference <a href="{{ site.baseurl}}/learninginfo#4"><b>Section 4: Encouraging Leadership Buy-In.</b></a>
