--- a/_includes/toolkit_sections/section_three.html
+++ b/_includes/toolkit_sections/section_three.html
@@ -3,7 +3,7 @@
     are the most important stakeholders to your agency? How will you engage them?
   </h2>
   <div class="heading_content_wrapper">
-    <div style="text-align: left; padding-right: 10px;">
+    <div style="text-align: left; padding-right: 10px; line-height: 30px;">
       Stakeholders are individuals, groups, or
       organizations who will contribute to or benefit
       from the development of your agency’s learning
