--- a/_includes/toolkit_sections/section_two.html
+++ b/_includes/toolkit_sections/section_two.html
@@ -4,7 +4,7 @@ question” and what are some examples?
   </h2>
 <div>
   <div class="heading_content_wrapper">
-    <div style="text-align: left; padding-right: 10px;">
+    <div style="text-align: left; padding-right: 10px; line-height: 30px;">
       An agency’s learning agenda will include priority
       questions that span a period of no less than four
       years (although it should be revisited at least
@@ -52,10 +52,10 @@ question” and what are some examples?
     agency mission is to reduce societal nuisances. The question is followed by series of
     sub-questions that are specific and answerable: </p>
     <ul style="text-align: left;">
-      <li> <i> Overarching question:</i> “How can we reduce public nuisances?” This question
+      <li style="line-height: 30px;"> <i> Overarching question:</i> “How can we reduce public nuisances?” This question
         could be included in a learning agenda, but it does not specify which of the many
         types of nuisances will be the focus for learning. </li>
-      <li> <i>Specific and answerable questions:</i> The level of specificity can vary for an
+      <li style="line-height: 30px;"> <i>Specific and answerable questions:</i> The level of specificity can vary for an
         answerable question. For example, the following three questions may all be
         considered answerable for the Department of Societal Betterment. The first looks
         OMB M-19-23 Reference
@@ -122,11 +122,11 @@ question” and what are some examples?
         for evidence building across a spectrum of methods. The following questions are aligned to
         the strategic goal, “Support small business revenue and job growth.” </p>
         <ul style="text-align: left;">
-          <li> <b>Foundational fact-finding:</b> What types of jobs do SBA loans create?</li>
-          <li> <b>Policy analysis:</b> What regulatory or policy improvements could be made to help
+          <li style="line-height: 30px;"> <b>Foundational fact-finding:</b> What types of jobs do SBA loans create?</li>
+          <li style="line-height: 30px;"> <b>Policy analysis:</b> What regulatory or policy improvements could be made to help
 SBA programs create more jobs?</li>
-          <li> <b>Performance measurement:</b> Are program grantees meeting their milestones? </li>
-          <li> <b>Program evaluation:</b> How does technical assistance impact loan performance?</li>
+          <li style="line-height: 30px;"> <b>Performance measurement:</b> Are program grantees meeting their milestones? </li>
+          <li style="line-height: 30px;"> <b>Program evaluation:</b> How does technical assistance impact loan performance?</li>
         </ul>
     </div>
     <p style="text-align: left;"> <b>Defining “Short-Term” and “Long-Term” Questions </b></p>
