--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -17,11 +17,7 @@ layout: base
   </div>
   <div class="toolkits-div">
     <div class="toolkit-div">
-      <img src="{{ '/assets/img/icons/capacity_icon.jpg' | prepend: site.baseurl }}" height="120" width="120">
-      <h2><a href="{{ site.baseurl}}/learningagenda/" class="tool-link"> Capacity Assessment Tool </a></h2>
-    </div>
-    <div class="toolkit-div">
-      <img src="{{ '/assets/img/icons/learning_icon.jpg' | prepend: site.baseurl }}" height="120" width="120">
+      <img src="{{ '/assets/img/icons/learning_icon.jpg' | prepend: site.baseurl }}" height="120" width="130">
       <h2><a href="{{ site.baseurl}}/learningagenda/" class="tool-link"> Learning Agenda Toolkit </a></h2>
     </div>
     <div class="toolkit-div">
@@ -33,13 +29,13 @@ layout: base
   <table class="download-footer" style="border: none;">
     <tr class="table-border">
       <td class="table-border" style="color: #2E9AC4; font-size: 20px;"><b> Downloads <b/></td>
-      <td class="table-border" style="text-decoration: underline;"> <a href="{{ page.download-one | prepend: site.baseurl }}"> Evidence Act: Phase I Overview </a></td>
+      <td class="table-border" style="text-decoration: underline;"> <a href="{{ page.download-one | prepend: site.baseurl }}"> Evidence Act: Phase 1 Overview </a></td>
       <td class="table-border" style="text-decoration: underline;"> <a href="{{ page.download-two | prepend: site.baseurl }}"> Quick Reference Sheet </a></td>
     </tr>
     <tr>
-      <td style="padding-left: 0px;"><img src="{{ '/assets/img/icons/download.jpg' | prepend: site.baseurl }}" height="100" width="150"> </img></td>
+      <td><img src="{{ '/assets/img/icons/download.jpg' | prepend: site.baseurl }}" height="100" width="150"> </img></td>
       <td class="table-border" > Master Checklist: Learning Agenda and Annual Evaluation Plan Toolkits </td>
-      <td class="table-border"> Engaging Sub-agencies in Evidence Act Implementation </td>
+      <td class="table-border"> Engaging Sub-Agencies in Evidence Act Implementation </td>
     </tr>
   </table>
 </section>
