--- a/_includes/toolkit_sections/annual_five.html
+++ b/_includes/toolkit_sections/annual_five.html
@@ -23,67 +23,67 @@
   <p style="text-align: left;"><b>Conducting Evaluation in Federal Agencies</b></p>
   <ol type=a style="text-align: left;">
     <li> <a href="https://www.pewtrusts.org/en/research-and-analysis/issue-briefs/2018/03/targeted-evaluations-can-help-policymakers-set-priorities"> Pew-MacArthur Results First, Targeted Evaluations Can Help Policymakers Set Priorities</a>
-      <p style="color: #D0D0D0;">This article walks through considerations for government entities conducting impact
+      <p style="color: darkslategray;">This article walks through considerations for government entities conducting impact
       evaluations, including different approaches to enhancing evaluation capacity.</p> </li>
     <li> <a href="https://www.gao.gov/new.items/d11176.pdf"> Government Accountability Office, Experienced Agencies Follow a Similar Model for
       Prioritizing Research</a>
-      <p style="color: #D0D0D0;">This article discusses how some federal agencies have planned evaluation agendas in the
+      <p style="color: darkslategray;">This article discusses how some federal agencies have planned evaluation agendas in the
       context of preparing spending plans for the coming year</p></li>
     <li> <a href="https://www.gao.gov/assets/660/655518.pdf">Government Accountability Office, Strategies to Facilitate Agencies’ Use of Evaluation in
       Program Management and Policy Making</a>
-      <p style="color: #D0D0D0;">This report focuses on the use of evaluation findings and offers suggestions from agencies about
+      <p style="color: darkslategray;">This report focuses on the use of evaluation findings and offers suggestions from agencies about
       how to facilitate evaluation influence.</p> </li>
     <li> <a href="http://coalition4evidence.org/wp-content/uploads/2012/03/Rigorous-Program-Evaluations-on-a-Budget-March-2012.pdf">  Coalition for Evidence-Based Policy, Rigorous Program Evaluations on a Budget</a>
-      <p style="color: #D0D0D0;">This article provides illustrative examples of agencies and organizations that have conducted
+      <p style="color: darkslategray;">This article provides illustrative examples of agencies and organizations that have conducted
       low-cost randomized controlled trials.</p> </li>
     <li> <a href="http://coalition4evidence.org/wp-content/uploads/2012/03/Rigorous-Program-Evaluations-on-a-Budget-March-2012.pdf">    Economic Report of the President, Evaluation as a Tool for Improving Federal Programs</a>
-      <p style="color: #D0D0D0;">  This chapter reflects on the implementation and use of impact evaluations in federal programs,
+      <p style="color: darkslategray;">  This chapter reflects on the implementation and use of impact evaluations in federal programs,
         with examples and lessons learned.</p> </li>
   </ol>
 
   <p style="text-align: left;"><b>Comprehensive Evaluation Toolkits and Guides</b></p>
   <ol type=a style="text-align: left;">
     <li> <a href="https://usaidlearninglab.org/cla-toolkit"> Pew-MacArthur Results First, Targeted Evaluations Can Help Policymakers Set Priorities</a>
-      <p style="color: #D0D0D0;">This toolkit contains guidance and tools on the Collaborating, Learning, and Adapting
+      <p style="color: darkslategray;">This toolkit contains guidance and tools on the Collaborating, Learning, and Adapting
       framework. It is designed for USAID staff members, but many of the tools and guides are
       broadly applicable.</p> </li>
     <li> <a href="https://www.nationalservice.gov/resources/evaluation/all-evaluation-resources"> Corporation for National & Community Service, Evaluation Core Curriculum Courses</a>
-      <p style="color: #D0D0D0;">  This site is designed to help users increase capacity for evaluation programs and interventions,
+      <p style="color: darkslategray;">  This site is designed to help users increase capacity for evaluation programs and interventions,
         with topics related to planning, managing, and reporting on evaluations.</p></li>
     <li> <a href="https://www.cdc.gov/eval/resources/index.htm">  Centers for Disease Control, Evaluation Resources</a>
-      <p style="color: #D0D0D0;">This site contains resources for conducting evaluations, with resources on evaluation
+      <p style="color: darkslategray;">This site contains resources for conducting evaluations, with resources on evaluation
       frameworks, tools and workbooks for conducting evaluations, and a self-study guide. </p> </li>
     <li> <a href="https://ies.ed.gov/pubsearch/pubsinfo.asp?pubid=REL2015057">    Institutes of Education Sciences, Logic Models for Program Design, Implementation, and
      Evaluation: Workshop Toolkit</a>
-      <p style="color: #D0D0D0;"> This guide is designed to educate practitioners on the purpose of a logic model and how to use
+      <p style="color: darkslategray;"> This guide is designed to educate practitioners on the purpose of a logic model and how to use
        one to support program evaluation.</p> </li>
     <li> <a href="https://www.gao.gov/assets/80/77277.pdf">Government Accountability Office, Performance Measurement and Evaluation</a>
-      <p style="color: #D0D0D0;">   This brief document provides an overview of different types of evaluation and discusses the
+      <p style="color: darkslategray;">   This brief document provides an overview of different types of evaluation and discusses the
         difference between performance measurement and evaluation.</p> </li>
     <li> <a href="https://www.gao.gov/assets/590/588146.pdf">  Government Accountability Office, Designing Evaluations: 2012 Revision</a>
-      <p style="color: #D0D0D0;">   This guide introduces key issues about planning evaluation studies of federal program, describes
+      <p style="color: darkslategray;">   This guide introduces key issues about planning evaluation studies of federal program, describes
         the different types of evaluations, and outlines the process for designing them.</p> </li>
   </ol>
 
   <p style="text-align: left;"><b>Evaluation Methods</b></p>
   <ol type=a style="text-align: left;">
     <li> <a href="https://toolkit.povertyactionlab.org/toolkit">   J-PAL North America, Evaluation Toolkit</a>
-      <p style="color: #D0D0D0;">This toolkit walks users through the process of preparing to launch a randomized controlled
+      <p style="color: darkslategray;">This toolkit walks users through the process of preparing to launch a randomized controlled
       trial.</p> </li>
     <li> <a href="https://www.acf.hhs.gov/opre/resource/using-behavioral-insights-to-increase-participation-in-social-service-programs-a-case-study">ACF Office of Planning, Research, and Evaluation, Using Behavioral Insights to Increase
       Participation in Social Services Programs: A Case Study</a>
-      <p style="color: #D0D0D0;">This case study helps readers to understand how to apply behavioral insights to real-world
+      <p style="color: darkslategray;">This case study helps readers to understand how to apply behavioral insights to real-world
         challenge.</p></li>
     <li> <a href="https://www.povertyactionlab.org/blog/5-21-18/six-rules-thumb-understanding-statistical-power"> J-PAL, Six Rules of Thumb for Understanding Statistical Power</a>
-      <p style="color: #D0D0D0;">This articles gives a brief primer on considerations related to statistical power.
+      <p style="color: darkslategray;">This articles gives a brief primer on considerations related to statistical power.
      </p> </li>
      <li> <a href="https://craftmediabucket.s3.amazonaws.com/uploads/PDFs/Key-Items-to-Get-Right-When-Conducting-Randomized-Controlled-Trials-of-Social-Programs.pdf"> Laura and John Arnold Foundation, Key Items to Get Right When Conducting
      Randomized Controlled Trials of Social Programs</a>
-       <p style="color: #D0D0D0;">This checklist covers items that are critical to the success of a randomized controlled trial.
+       <p style="color: darkslategray;">This checklist covers items that are critical to the success of a randomized controlled trial.
       </p> </li>
     <li> <a href="https://www.povertyactionlab.org/sites/default/files/resources/2017.04.14-Real-World-Challenges-to-Randomization-and-Their-Solutions.pdf">J-PAL, Real-World Challenges to Randomization and Their Solutions
       </a>
-      <p style="color: #D0D0D0;">This report provides overview of common challenges related to randomized controlled trials is
+      <p style="color: darkslategray;">This report provides overview of common challenges related to randomized controlled trials is
       geared toward policymakers with a general understanding of such studies.
      </p> </li>
   </ol>
