--- a/_includes/toolkit_sections/annual_one.html
+++ b/_includes/toolkit_sections/annual_one.html
@@ -1,9 +1,14 @@
+<p class="workbook_link" style="font-size: 20px;">
+  <a href="{{prepend: site.baseurl}}/assets/toolkits/annual_overview.pdf">
+    Click here to view the Annual Evaluation Plan Overview.
+  </a>
+</p>
 <div class="usa-grid" align="center">
   <h2 class="heading"> An Annual Evaluation Plan describes specific evaluations that your agency will undertake. What
 is an Annual Evaluation Plan, and how can it benefit your agency?
   </h2>
   <div class="heading_content_wrapper">
-    <div style="text-align: left; padding-right: 10px;">
+    <div style="text-align: left; padding-right: 10px; line-height: 30px;">
       Under the Foundations for Evidence-Based
       Policymaking Act of 2018 (Evidence Act), Chief
       Financial Officers (CFO) Act agencies are required to
@@ -11,7 +16,7 @@ is an Annual Evaluation Plan, and how can it benefit your agency?
       Plan. Non-CFO Act agencies and agency subcomponents are encouraged, but not required, to
       create them.
     </div>
-    <div class="side-panel">
+    <div class="side-panel" style="width: 4000px;">
       <p><b>OMB M-19-23 Reference</b></p>
       <p><b>What is the Annual Evaluation Plan?</b></p>
       <p style="text-align: left;">
@@ -70,13 +75,14 @@ is an Annual Evaluation Plan, and how can it benefit your agency?
   <p style="text-align: left;"><b>Benefits of an Annual Evaluation Plan</b></p>
   <p style="text-align: left;">
     <b><span style='color:#2E9AC4'>Must be updated each year. </span></b>
-    An Annual Evaluation Plan can have important benefits for your agency. These plans can be
+    The Annual Evaluation Plan Overview, which can be downloaded at the top of this page, provides
+    a quick summary of the required and optional components that agencies can choose to include in their plan. These plans can be
     useful even if your agency already has an active evaluation program and shares information
     publicly about its studies. Specifically, developing the plan can help your agency to:
   </p>
   <div style="display: flex; justify-content: space-between;">
     <p style="text-align: left; margin-right: 100px;"><b> Benefits </b> </p>
-    <p style="text-align: right; margin-right: 100px;"><b> Example Actions </b> </p>
+    <p style="text-align: right; margin-right: 157px;"><b> Example Actions </b> </p>
   </div>
   <div class="contents_wrapper">
     <div style="display: flex; flex-direction: column; width: 2000px;">
@@ -98,7 +104,7 @@ is an Annual Evaluation Plan, and how can it benefit your agency?
       agency staff and the public.  </p>
   </div>
   <div class="contents_wrapper">
-    <div style="display: flex; flex-direction: column; width: 2000px;">
+    <div style="display: flex; flex-direction: column; width: 4000px;">
       <p style='color:#2E9AC4; margin-bottom: 0px;'> Reinforce a shared commitment to and
         capacity for evidence building in furthering
         the agency’s mission. </p> <br/>
@@ -126,7 +132,7 @@ is an Annual Evaluation Plan, and how can it benefit your agency?
       concepts and practices. </p>
   </div>
   <div class="contents_wrapper">
-    <div style="display: flex; flex-direction: column; width: 2000px;">
+    <div style="display: flex; flex-direction: column; width: 2900px;">
       <p style='color:#2E9AC4; margin-bottom: 0px;'> Document what you have learned and plan
         activities to address remaining learning
         agenda priority questions.  </p>
