final styling edits

--- a/_includes/toolkit_sections/annual_one.html
+++ b/_includes/toolkit_sections/annual_one.html
@@ -16,7 +16,7 @@ is an Annual Evaluation Plan, and how can it benefit your agency?
       Plan. Non-CFO Act agencies and agency subcomponents are encouraged, but not required, to
       create them.
     </div>
-    <div class="side-panel" style="width: 4000px;">
+    <div class="side-panel" style="width: 5000px;">
       <p><b>OMB M-19-23 Reference</b></p>
       <p><b>What is the Annual Evaluation Plan?</b></p>
       <p style="text-align: left;">
@@ -85,7 +85,7 @@ is an Annual Evaluation Plan, and how can it benefit your agency?
     <p style="text-align: right; margin-right: 157px;"><b> Example Actions </b> </p>
   </div>
   <div class="contents_wrapper">
-    <div style="display: flex; flex-direction: column; width: 2000px;">
+    <div style="display: flex; flex-direction: column; width: 2000px; margin-right: 50px;">
       <p style='color:#2E9AC4; margin-bottom: 0px;'> Promote understanding, transparency, and accountability. </p>
       <p> An Annual Evaluation Plan is an opportunity to
         tell a coherent and compelling story of what
@@ -96,15 +96,15 @@ is an Annual Evaluation Plan, and how can it benefit your agency?
         can inform agency staff and build trust with
         external stakeholders. </p>
     </div>
-    <img src="{{ '/assets/img/icons/arrow.png' | prepend: site.baseurl }}" alt="" height="50" width="50" style="margin-top: 100px; margin: 50px;" />
-    <p>The Evaluation Officer (EO) and your
+    <img src="{{ '/assets/img/icons/arrow.png' | prepend: site.baseurl }}" alt="" height="50" width="50" style="margin-top: 150px;" />
+    <p style="margin-left: 50px; margin-top: 70px;">The Evaluation Officer (EO) and your
       agency’s communications office
       could promote the importance of
       the Annual Evaluation Plan to
       agency staff and the public.  </p>
   </div>
   <div class="contents_wrapper">
-    <div style="display: flex; flex-direction: column; width: 4000px;">
+    <div style="display: flex; flex-direction: column; width: 4000px; margin-right: 50px;">
       <p style='color:#2E9AC4; margin-bottom: 0px;'> Reinforce a shared commitment to and
         capacity for evidence building in furthering
         the agency’s mission. </p> <br/>
@@ -119,8 +119,8 @@ is an Annual Evaluation Plan, and how can it benefit your agency?
         build capacity across your agency for using
         evaluations for ongoing improvement. </p>
     </div>
-    <img src="{{ '/assets/img/icons/arrow.png' | prepend: site.baseurl }}" alt="" height="50" width="50" style="margin-top: 100px; margin: 50px;" />
-    <p>The EO and related staff could
+    <img src="{{ '/assets/img/icons/arrow.png' | prepend: site.baseurl }}" alt="" height="50" width="50" style="margin-top: 150px;" />
+    <p style="margin-left: 50px; margin-top: 70px;">The EO and related staff could
       involve diverse sub-agency
       representation in a working group
       or core team to brainstorm specific
@@ -132,7 +132,7 @@ is an Annual Evaluation Plan, and how can it benefit your agency?
       concepts and practices. </p>
   </div>
   <div class="contents_wrapper">
-    <div style="display: flex; flex-direction: column; width: 2900px;">
+    <div style="display: flex; flex-direction: column; width: 2900px; margin-right: 50px;">
       <p style='color:#2E9AC4; margin-bottom: 0px;'> Document what you have learned and plan
         activities to address remaining learning
         agenda priority questions.  </p>
@@ -147,8 +147,8 @@ is an Annual Evaluation Plan, and how can it benefit your agency?
         require evaluation and plan new studies as
         needed. </p>
       </div>
-    <img src="{{ '/assets/img/icons/arrow.png' | prepend: site.baseurl }}" alt="" height="50" width="50" style="margin-top: 100px; margin: 50px;" />
-    <p>Throughout the year, the EO and
+    <img src="{{ '/assets/img/icons/arrow.png' | prepend: site.baseurl }}" alt="" height="50" width="50" style="margin-top: 150px;" />
+    <p style="margin-left: 50px; margin-top: 70px;">Throughout the year, the EO and
       related staff could schedule inperson or web-based presentations
       for evaluators to share what has
       been learned from “significant”
