--- a/_includes/toolkit_sections/annual_two.html
+++ b/_includes/toolkit_sections/annual_two.html
@@ -16,7 +16,7 @@ develop a planning process that suits its unique needs and capacity?
         <li> Receive updates on Annual Evaluation Plan developments</li>
       </ul>
     </div>
-    <div class="side-panel">
+    <div class="side-panel" style="height: 370px;">
       <p><b>OMB M-19-23 Reference</b></p>
       <p><b> Creating an Annual Evaluation Plan:
         Management and Leadership of the
