--- a/_includes/toolkit_sections/section_five.html
+++ b/_includes/toolkit_sections/section_five.html
@@ -68,7 +68,7 @@
         <b><span style='color:orange'>Worksheet #3</span></b> of the Learning Agenda Workbook includes a separate table to create a
         project plan for the interim learning agenda.
       </div>
-      <div class="side-panel">
+      <div class="side-panel" style="width: 4600px;">
         <p><b>OMB M-19-23 Reference</b></p>
         <p style="text-align: left;">
           Because this interim learning agenda is being
@@ -145,7 +145,7 @@
             could be aligned to a strategic goal.
             </li>
             <li>Will the learning agenda and strategic planning stakeholder engagement
-            processes be integrated to gather potential priority questions?<b><span style='color:#03CAB9'>Example:</span></b> During the environmental scanning process in strategic
+            processes be integrated to gather potential priority questions?<b><span style='color:#03CAB9'> Example:</span></b> During the environmental scanning process in strategic
             planning, the EO and strategic planning team could partner to gather
             information about unknowns in the agency.
             </li>
@@ -366,7 +366,7 @@
       </tr>
       <tr>
         <td> Questions to Consider </td>
-        <td>
+        <td style="line-height: 30px;">
           How can the learning agenda process help launch or improve publicprivate partnerships for the use of quality scientific and other data in
           policymaking?
           <b><span style='color:#03CAB9'>Example:</span></b> Priority questions requiring access to geospatial data can
@@ -403,7 +403,7 @@
       </tr>
       <tr>
         <td> Questions to Consider </td>
-        <td>
+        <td style="line-height: 30px;">
           In reviewing the agency’s risk profile, are there priority questions that the
           CRO would recommend be included in the learning agenda?
           <b><span style='color:#03CAB9'>Example: </span></b>An agency’s risk profile is a living document. The EO and
