--- a/_includes/toolkit_sections/section_four.html
+++ b/_includes/toolkit_sections/section_four.html
@@ -18,7 +18,7 @@
       ultimately generating evidence that will be used
       by leadership within your agency’s budget and policy timeframes.
     </div>
-    <div class="side-panel">
+    <div class="side-panel" style="width: 4000px;">
       <p><b>OMB M-19-23 Reference</b></p>
       <p style="text-align: left;"> Agency leadership should be engaged
       in the development and implementation
