--- a/_includes/toolkit_sections/section_two.html
+++ b/_includes/toolkit_sections/section_two.html
@@ -17,7 +17,7 @@ question” and what are some examples?
       that an agency may include in its learning
       agenda.
     </div>
-    <div class="side-panel">
+    <div class="side-panel" style="width: 4000px;">
       <p><b>OMB M-19-23 Reference</b></p>
       <p style="text-align: left;">An agency learning agenda addresses
       priority questions (i.e., questions
@@ -110,7 +110,10 @@ question” and what are some examples?
         below for a subset of the Small Business
         Administration’s (SBA) learning agenda
         questions, organized by evidence type. </p>
-      <img src="{{ '/assets/toolkits/pie_chart.jpg' | prepend: site.baseurl }}" alt="" height="550" width="600" style="margin-top: 100px; margin: 50px;" />
+        <div style="display: flex; flex-direction: column; width: 9000px;">
+          <p><b>OMB M-19-23 Reference</b></p>
+          <img src="{{ '/assets/toolkits/pie_chart.jpg' | prepend: site.baseurl }}" alt="" height="550" width="600" style="margin-bottom: 40px;" />
+        </div>
     </div>
     <div class="blue_div">
       <p style="text-align: center;"> <b>How the Small Business Administration’s Enterprise Learning Agenda uses all Four
