--- a/_includes/toolkit_sections/section_one.html
+++ b/_includes/toolkit_sections/section_one.html
@@ -27,7 +27,7 @@
       other stakeholders. A learning agenda can facilitate evidence generation, leading to
       informed decisions about an agency’s policies, programs, operations, and regulations.
     </div>
-    <div class="side-panel" style="width: 4000px;">
+    <div class="side-panel" style="width: 4000px; height: 400px;">
       <p><b>OMB M-19-23 Reference</b></p>
       <p><b> What is a learning agenda
       (evidence-building plan)? </b></p>
@@ -43,9 +43,9 @@
   </div>
   <p style="text-align: left;"> <b> Benefits of a Learning Agenda </b> </p>
   <p style="text-align: left;"> Learning agendas can have many benefits for agencies. Specifically, the plans can be used to: </p>
-  <p style="text-align: right; margin-right: 100px;"><b> Example Actions </b> </p>
+  <p style="text-align: right; margin-right: 120px;"><b> Example Actions </b> </p>
     <div class="contents_wrapper">
-      <p style="width: 1400px"> <i>Foster a culture of learning and continuous
+      <p style="width: 1600px"> <i>Foster a culture of learning and continuous
           improvement.</i> Learning agenda development
           and implementation includes frequent internal
           and external stakeholder engagement. As
@@ -54,7 +54,7 @@
           use engagement opportunities to educate
           and encourage stakeholders to build and use
           evidence. </p>
-      <img src="{{ '/assets/img/icons/arrow.png' | prepend: site.baseurl }}" alt="" height="50" width="50" style="margin-top: 100px; margin: 50px;" />
+      <img src="{{ '/assets/img/icons/arrow.png' | prepend: site.baseurl }}" alt="" height="50" width="50" style="margin-top: 80px; margin: 50px;" />
       <p>The EO could establish an
           Agency-Specific Evidence
           Community of Practice to foster
@@ -62,7 +62,7 @@
           a culture of learning. </p>
     </div>
     <div class="contents_wrapper">
-      <p style="width: 1100px"> <i>Engage stakeholders in evidence planning
+      <p style="width: 1170px"> <i>Engage stakeholders in evidence planning
           and building to help achieve an agency’s
           mission. </i>  The learning agenda process
           provides opportunities to work with both
@@ -71,20 +71,20 @@
           and often, an agency can continuously build
           evidence that can be used to improve strategy
           and operations.</p>
-      <img src="{{ '/assets/img/icons/arrow.png' | prepend: site.baseurl }}" alt="" height="50" width="50" style="margin-top: 100px; margin: 50px;" />
+      <img src="{{ '/assets/img/icons/arrow.png' | prepend: site.baseurl }}" alt="" height="50" width="50" style="margin-top: 80px; margin: 50px;" />
       <p>The EO and related staff could
         facilitate a series of listening
         sessions to hear potential
         priority questions. </p>
     </div>
     <div class="contents_wrapper">
-      <p style="width: 2000px"> <i>Create a dynamic and adaptive Strategic
+      <p style="width: 2100px"> <i>Create a dynamic and adaptive Strategic
         Plan. </i> Priority questions in the learning agenda
         may align to an agency’s goals or objectives.
         Alignment to the Strategic Plan can help
         agencies build evidence on leading strategies
         to accomplish goals and objectives.</p>
-      <img src="{{ '/assets/img/icons/arrow.png' | prepend: site.baseurl }}" alt="" height="50" width="50" style="margin-top: 100px; margin: 50px;" />
+      <img src="{{ '/assets/img/icons/arrow.png' | prepend: site.baseurl }}" alt="" height="50" width="50" style="margin-top: 80px; margin: 50px;" />
       <p>The EO and Performance
         Improvement Officer (PIO)
         should collaborate during the
@@ -94,7 +94,7 @@
         goals and objectives. </p>
     </div>
     <div class="contents_wrapper">
-      <p style="width: 2000px"> <i>Help develop other major agency plans.  </i>
+      <p style="width: 1900px"> <i>Help develop other major agency plans.  </i>
         As explained in <a href="{{ site.baseurl}}/learninginfo#5""><b>Section 5: Developing a
         Learning Agenda</b></a>, the learning agenda can
         support a variety of major plans and activities,
@@ -104,7 +104,7 @@
         Performance and Results Act (GPRA)
         Modernization Act and Program Management
         Improvement and Accountability Act.</p>
-      <img src="{{ '/assets/img/icons/arrow.png' | prepend: site.baseurl }}" alt="" height="50" width="50" style="margin-top: 100px; margin: 50px;" />
+      <img src="{{ '/assets/img/icons/arrow.png' | prepend: site.baseurl }}" alt="" height="50" width="50" style="margin-top: 80px; margin: 50px;" />
       <p>The EO and Program
         Management Improvement
         Officer (PMIO) could collaborate
@@ -114,14 +114,14 @@
         questions.</p>
     </div>
     <div class="contents_wrapper">
-      <p style="width: 2000px"> <i> Establish a framework for weaving evidence
+      <p style="width: 2050px"> <i> Establish a framework for weaving evidence
         into the budget cycle. </i>Learning agenda
         questions can support programs, policies,
         regulations, and other needs. A well-designed
         schedule of learning activities can provide
         timely information for budgeting decisions and
         lead to increases in resource efficiency.</p>
-      <img src="{{ '/assets/img/icons/arrow.png' | prepend: site.baseurl }}" alt="" height="50" width="50" style="margin-top: 100px; margin: 50px;" />
+      <img src="{{ '/assets/img/icons/arrow.png' | prepend: site.baseurl }}" alt="" height="50" width="50" style="margin-top: 80px; margin: 50px;" />
       <p>The EO could collaborate with
         the Chief Financial Officer
         (CFO) to modify budget
@@ -139,7 +139,7 @@
         resources, and leading practices; and
         identifying opportunities for crosscutting
         learning activities.</p>
-      <img src="{{ '/assets/img/icons/arrow.png' | prepend: site.baseurl }}" alt="" height="50" width="50" style="margin-top: 100px; margin: 50px;" />
+      <img src="{{ '/assets/img/icons/arrow.png' | prepend: site.baseurl }}" alt="" height="50" width="50" style="margin-top: 80px; margin: 50px;" />
       <p>The EO and related staff could
         involve diverse sub-agency
         representation in a working
@@ -149,7 +149,7 @@
         agenda.</p>
     </div>
     <div class="contents_wrapper">
-      <p style="width: 2000px"> <i> Plan congressionally mandated evaluations
+      <p style="width: 1700px"> <i> Plan congressionally mandated evaluations
         and address recommendations from federal
         watchdog agency reports. </i> As appropriate, the
         learning agenda can provide a framework for
@@ -157,7 +157,7 @@
         evaluations, close out recommendations,
         remediate issues, and offer supporting
         evidence.</p>
-      <img src="{{ '/assets/img/icons/arrow.png' | prepend: site.baseurl }}" alt="" height="50" width="50" style="margin-top: 100px; margin: 50px;" />
+      <img src="{{ '/assets/img/icons/arrow.png' | prepend: site.baseurl }}" alt="" height="50" width="50" style="margin-top: 80px; margin: 50px;" />
       <p>The agency can review
         watchdog report
         recommendations and work with
@@ -166,13 +166,13 @@
         the recommendation.</p>
     </div>
     <div class="contents_wrapper">
-      <p style="width: 2000px"> <i> Publicly identify learning priorities.</i> The
+      <p style="width: 1900px"> <i> Publicly identify learning priorities.</i> The
         learning agenda will be a public document.
         This promotes transparency and may allow
         external stakeholders an opportunity to build
         evidence in areas of interest to an agency,
         sometimes at little or no cost.</p>
-      <img src="{{ '/assets/img/icons/arrow.png' | prepend: site.baseurl }}" alt="" height="50" width="50" style="margin-top: 100px; margin: 50px;" />
+      <img src="{{ '/assets/img/icons/arrow.png' | prepend: site.baseurl }}" alt="" height="50" width="50" style="margin-top: 80px; margin: 50px;" />
       <p>A learning agenda priority
         question could be shared on
         Challenge.gov, a crowdsourcing
