--- a/_layouts/toolkit-info.html
+++ b/_layouts/toolkit-info.html
@@ -40,7 +40,7 @@ layout: base
     </div>
       <p class="workbook_link">
         <a href="{{ page.download | prepend: site.baseurl }}">
-          Click here to download the {{ page.title }} Toolkit Workbook.
+          Click here to download the {{ page.title }} Toolkit Workbook
         </a>
       </p>
       {% if page.title == "Learning Agenda" %}
