--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,10 @@
         </li>
          <li>
           <a href="{{ site.baseurl }}/toolkits/">Evidence Act Toolkits</a>
-        </li>              
+        </li>   
+        <li>
+          <a href="{{ site.baseurl }}/blog/">Utilization Blog</a>
+        </li> 
       </ul>
     </div>
     <div class="footer-links">
@@ -65,4 +68,6 @@
   </div>
 </footer>
 {% include javascript.html %}
+
+
 
